examples/test/testpolicy919.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy919
  namespace: namespace396
spec:
  podSelector:
    matchLabels:
      key17: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value24
          key41: value31
      podSelector:
        matchLabels:
          key19: value3
          key36: value43
